--- a/src/style.css
+++ b/src/style.css
@@ -95,12 +95,15 @@ h5{
 	margin-top: 3rem
 }
 
-.ml-1{
-	margin-left: .5rem
+.mlr-1{
+	margin-left: .5rem;
+	margin-right: .5rem;
 }
-.ml-2{
-	margin-left: 1.5rem
+.mlr-2{
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
 }
-.ml-3{
-	margin-left: 3rem
+.mlr-3{
+	margin-left: 3rem;
+	margin-right: 3rem;
 }
