--- a/src/slide.css
+++ b/src/slide.css
@@ -6,9 +6,10 @@ img {
 }
 
 .slideshow-container {
-  max-width: 62.5rem;
+  max-width: 90%;
   position: relative;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .prev, .next {
@@ -41,7 +42,7 @@ img {
   background-color: #29251D;
   font-size: 0.938rem;
   padding: 0.5rem 0.75rem;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   text-align: center;
@@ -67,7 +68,7 @@ img {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.img-active, .dot:hover {
   background-color: #717171;
 }
 
