--- a/src/style.css
+++ b/src/style.css
@@ -19,16 +19,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+	
 }
 
 html, body{
     background-color: aliceblue;
-    height: 100%;
     font-family: "oswald";
+	height: 100%;
+	
 }
 
 
-section{
+article{
     margin-top: 2.25rem;
     padding: 10px;
     text-align: center;
@@ -36,9 +38,10 @@ section{
     margin-left: auto;
     margin-right: auto;
     display: block;
+	min-height: 100%;
 }
 
-article{ 
+section{ 
     padding-right: 0.95rem;
     padding-left: 0.95rem;
 	color: #29251D;
@@ -62,7 +65,6 @@ figcaption {
     padding: 0.2rem;
     text-align: center;
 }
-
 
 h1{
 	font-size: 2.5rem
