--- a/src/premios.css
+++ b/src/premios.css
@@ -1,18 +1,25 @@
 thead th{
     color: #fff;
-    background-color: #29251D;
-    border: 0.15rem solid #1AE8E5;
+    background-color: #363636;
 }
 
-table td, table th{
+td, th{
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
 	vertical-align: top;
 	text-align: center;
-	border-bottom: 0.15rem solid #1AE8E5;
+	vertical-align: inherit;
+	border: 0.15rem solid #1AE8E5;
 }
+
 table{
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
+	border-collapse: collapse;
+
+}
+
+.title{
+	background-color: #1C1C1C;
 }
