--- a/src/slide.css
+++ b/src/slide.css
@@ -1,6 +1,7 @@
 .mySlides {
     display: none;
 }
+
 img {
     vertical-align: middle;
 }
@@ -33,13 +34,13 @@ img {
 }
 
 .prev:hover, .next:hover {
-  background-color: #29251D;
+  background-color: #1C1C1C;
   color: #1AE8E5;
 }
 
 .texto {
   color: #f2f2f2;
-  background-color: #29251D;
+  background-color: #1C1C1C;
   font-size: 0.938rem;
   padding: 0.5rem 0.75rem;
   position: relative;
@@ -50,7 +51,7 @@ img {
 
 .num-img {
   color: #f2f2f2;
-  background-color: #29251D;
+  background-color: #1C1C1C;
   font-size: 0.75rem;
   padding: 0.5rem 0.75rem;
   position: absolute;
