--- a/src/footer.css
+++ b/src/footer.css
@@ -1,51 +1,95 @@
 footer{
-	margin-top: 2.25rem;
-	border-top: 0.15rem solid #1AE8E5;	
-	height: 6rem;
+	border-top: 0.15rem solid #1AE8E5;
 	background-color: #1C1C1C;
 	position: relative;
-	color: #ffffff;
-	display: block;
-	padding: 0.5rem 1rem;
-	margin-left: 0%;
-	margin-right: 0%;
-	bottom:0;
-	right:0;
-	left:0;
-}
-
-footer div{
-	padding-right: 1.875rem;
-	padding-top: 0.35rem;
-	margin: 0;
-    background-color: #1C1C1C;
-	font: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	color: #f2f2f2;
+	display: grid;
+	grid-template-areas:"f-line1" 
+						"f-line2";
+	grid-template-rows: 80% 20%;
+	height: 15vh;
+	max-width: 100vw;
 	text-align: center;
+    margin-top: 2.25rem;
+    bottom:0;
+	right:0;
+	left:0;	
 }
 
-footer a:hover {
-	color: #1AE8E5;
+#f-line1{
+	display: grid;
+	position: relative;
+	grid-template-areas: "f-left f-center f-right";
+	grid-template-columns: 30% 40% 30%;
+	background-color: #1C1C1C;
+    align-items: center;
+    text-align: center;
+}
+
+#f-line1 .f-destaque{
+	font-weight: bold;
+}
+
+#f-line1 p{
+	font-weight: 200;
+}
+
+#f-line1 a, #f-line2 a{
+	text-decoration: none;
+    color: #f2f2f2;
+}
+
+#f-line1 a:hover, #f-line2 a:hover{
+    color: #1AE8E5;	
 	transition-duration: 1s;
 }
 
-footer a{
-	text-decoration: none;
-	color: #f2f2f2;
+#f-line2{
+	background-color: #161616;
+	position: relative;
+    display: grid;
+	padding-top: 0.15rem;
+    text-align: center;
+    color: #f2f2f2;
+    align-items: center;
 }
 
-.a-fot{
-	float: right;
-	padding-top: 1.875rem;
-}
 
-@media(max-width: 768px) {
-    footer div{
-		padding-right: 1.5rem;
-		padding-top: 0rem;
-	}
-
-	.a-fot{
-		margin-left: auto;
-		right: 0;
+@media only screen and (min-device-height: 768px) and (max-device-width: 1366px){
+	footer{
+        height: 20vh;
+        grid-template-areas:"f-line1" 
+						    "f-line2";
+	    grid-template-rows: 80% 20%;
 	}
 }
+
+@media only screen and (min-device-height: 1366px) and (max-device-width: 768px){
+	footer{
+        height: 15vh;
+        grid-template-areas:"f-line1" 
+						    "f-line2";
+	    grid-template-rows: 80% 20%;
+	}
+}
+
+@media only screen and (min-device-height: 360px) and (max-device-width: 640px){
+	footer{
+        height: 40vh;
+        grid-template-areas:"f-line1" 
+						    "f-line2";
+	    grid-template-rows: 75% 25%;
+	}
+}
+
+@media only screen and (min-device-height: 640px) and (max-device-width: 360px){
+	footer{
+        height: 30vh;
+        grid-template-areas:"f-line1" 
+						    "f-line2";
+	    grid-template-rows: 70% 30%;
+	}
+}
+
+
+
