--- a/src/galeria.css
+++ b/src/galeria.css
@@ -7,7 +7,7 @@ img {
 }
 
 .slideshow-container {
-  max-width: 90%;
+  width: 80%;
   position: relative;
   margin-left: auto;
   margin-right: auto;
@@ -102,4 +102,8 @@ img {
   .prev, .next,.text {
       font-size: 0.688rem;
     }
+
+    .slideshow-container {
+      width: 100%;
+    } 
 }
