--- a/src/avaliacao.css
+++ b/src/avaliacao.css
@@ -78,7 +78,7 @@ textarea {
 .container-grid-rating{
 	display: grid;
 	position: relative;
-	grid-template-areas: "grid-item" "grid-item";
+	grid-template-areas: "grid-item-1" "grid-item-2";
 	grid-template-columns: 50% 50%;
 }
 
@@ -140,16 +140,58 @@ tr:nth-child(even) {
     font-size: 1rem;
 }
 
-@media(max-width: 800px) {
-	.container-grid-rating{
-		grid-template-areas: "grid-item" 
-							 "grid-item";
+.form-b{
+    margin-top: 5rem;
+}
+
+
+@media only screen and (max-device-height: 768px) and (max-device-width: 1366px){
+	
+}
+
+@media only screen and (max-device-height: 1366px) and (max-device-width: 768px){
+    
+}
+
+@media only screen and (max-device-height: 360px) and (max-device-width: 640px){
+	
+}
+
+@media only screen and (max-device-height: 640px) and (max-device-width: 360px){
+	
+}
+
+@media only screen and (max-device-height: 768px) and (max-device-width: 1366px){
+	table{
+		font-size: 2.5vh;
+	}
+}
+
+@media only screen and (max-device-height: 1366px) and (max-device-width: 768px){
+	table{
+		font-size: 2vh;
+	}
+    .container-grid-rating{
+		grid-template-areas: "grid-item-1" 
+							 "grid-item-2";
 		grid-template-columns: 100%;    
 	}
-    table{
-		font-size: 0.95rem;
+    .form-b{
+        margin-top: 6rem;
+    }
+}
+
+@media only screen and (max-device-height: 360px) and (max-device-width: 640px){
+	table{
+		font-size: 6vh;
 	}
-	
+    			
+}
+
+@media only screen and (max-device-height: 640px) and (max-device-width: 360px){
+	table{
+		font-size: 3vh;
+	}	
 }
 
 
